--- a/action.yml
+++ b/action.yml
@@ -3,7 +3,7 @@ description: 'This will run phpcs on PRs'
 author: 'rtCamp'
 runs:
   using: 'docker'
-  image: 'docker://poxtron/action-phpcs-code-review:v2.0.2'
+  image: 'Dockerfile'
 branding:
   icon: 'check-circle'
   color: 'green'
